# pre-commit

./: .pre-commit-hooks.yaml  check_private_guild_sync.py  setup.cfg  setup.py
guubot/: check_private_guild_sync.py
